Fix colors/contrast of icons, toolbar and some texts

--- a/chrome/Custom.css
+++ b/chrome/Custom.css
@@ -1,14 +1,17 @@
-/* Dracula Theme v0.4.0
- *
+/*** Dracula Theme for Google Chrome DevTools ***************************/
+/*
 /* https://github.com/zenorocha/dracula-theme
 /*
 /* Copyright 2013, All rights reserved
 /*
 /* Code licensed under the MIT license
-/* http://zenorocha.mit-license.org
+/* http://vagnersantana.mit-license.org
 /*
-/* @author Zeno Rocha <hi@zenorocha.com>
 /* @author Vagner Santana <vagnervjs@gmail.com>
+/*
+/* Credits:
+/* Based on ZeroDarkMatrix Theme for Chrome by Maurice Cruz
+/* https://github.com/mauricecruz/chrome-devtools-zerodarkmatrix-theme
 /*************************************************************************/
 
 
@@ -151,11 +154,11 @@
 #-webkit-web-inspector .selector-matches {color:#50fa7b!important;}
 #-webkit-web-inspector .webkit-css-selector {color:#50fa7b!important;}
 #-webkit-web-inspector .webkit-css-at-rule {color:#b094bb!important;}
-#-webkit-web-inspector .webkit-css-color {color:#FFCF67!important;}
+#-webkit-web-inspector .webkit-css-color {color:#bd93f9!important;}
 #-webkit-web-inspector .webkit-css-comment {color:#6272a4!important;}
 #-webkit-web-inspector .webkit-css-important {color:#b094bb!important;}
 #-webkit-web-inspector .webkit-css-keyword {color:#bd93f9!important;}
-#-webkit-web-inspector .webkit-css-number {color:#ffcf67!important;}
+#-webkit-web-inspector .webkit-css-number {color:#bd93f9!important;}
 #-webkit-web-inspector .webkit-css-property,
 #-webkit-web-inspector .styles-section .properties > li .webkit-css-property {color:#6aedff!important;font-weight:400;}
 #-webkit-web-inspector .webkit-css-string {color:#fd963f!important;}
@@ -311,9 +314,9 @@
 }
 
 @-webkit-keyframes pulsate {
-	0% { background-color: #333;}
-	50% { background-color: #444;}
-	100% { background-color: #333;}
+	0% { background-color: #333544;}
+	50% { background-color: #404255;}
+	100% { background-color: #333544;}
 }
 
 @-webkit-keyframes bounceInLeft {
@@ -690,7 +693,7 @@
 }
 
 #-webkit-web-inspector .split-view-sidebar-right {
-	border-left: 1px solid #3A3A3A !important;
+	border-left: 1px solid #333544 !important;
 	-webkit-box-shadow: none !important;
 }
 
@@ -716,7 +719,7 @@
 #-webkit-web-inspector button.clear-status-bar-item:active .glyph,
 #-webkit-web-inspector button.garbage-collect-status-bar-item:active .glyph,
 #-webkit-web-inspector button.glue-async-status-bar-item:active .glyph {
-	background-color: rgba(137,245,162,.6) !important;
+	background-color: #9198c3 !important;
 }
 
 #-webkit-web-inspector #scripts-debugger-status {
@@ -736,8 +739,8 @@
 #-webkit-web-inspector #console-prompt {
 	color: #f1f1f1 !important;
 	border-top: none !important;
-	border-top: 1px solid #333 !important;
-	border-bottom: 1px solid #444 !important;
+	border-top: 1px solid #393f58 !important;
+	border-bottom: 1px solid #393f58 !important;
 }
 
 #-webkit-web-inspector #console-messages .console-message,
@@ -747,9 +750,9 @@
 }
 
 #-webkit-web-inspector #console-messages .console-user-command {
-	background-color: #252525 !important;
-	border-top: 1px solid #2a2a2a !important;
-	border-bottom: 1px solid #1e1e1e !important;
+	background-color: #262a3b !important;
+	border-top: 1px solid #363b53 !important;
+	border-bottom: 1px solid #363b53 !important;
 }
 
 #-webkit-web-inspector .console-message .children li,
@@ -953,7 +956,7 @@
 #-webkit-web-inspector .styles-section {
 	padding: 4px 0 !important;
 	margin-left: 5px;
-	border-top: 1px solid #444 !important;
+	border-top: 1px solid #7f8cbe !important;
 	border-bottom: none !important;
 }
 
@@ -990,7 +993,7 @@
 	color: #d3d3d3 !important;
 	text-shadow: none !important;
 	border-top: 1px solid #282a36 !important;
-	border-bottom: 1px solid #333 !important;
+	border-bottom: 1px solid #94a3dd !important;
 }
 
 #-webkit-web-inspector .pane > .title {
@@ -1007,9 +1010,9 @@
 
 /*-- STATE DISPLAY --*/
 #-webkit-web-inspector .styles-element-state-pane {
-	background: #333 !important;
+	background: #21242f !important;
 	padding: 4px 0 !important;
-	border-bottom: 1px solid #666 !important;
+	border-bottom: 1px solid #474f6b !important;
 }
 
 #-webkit-web-inspector .styles-element-state-pane.expanded {
@@ -1442,15 +1445,15 @@
 /* Tabbed Panes
 /*****************************************/
 #-webkit-web-inspector .status-bar, #-webkit-web-inspector .tabbed-pane:not(.help-window-main) .tabbed-pane-header {
-	background: -webkit-linear-gradient(#505050,#383838) !important;
-	border-top: 1px solid #282a36 !important;
-	border-bottom: 1px solid #282a36 !important;
-	border-color: #282a36 !important;
-	box-shadow: inset 0 1px 0 #6E6E6E, 0 2px 2px rgba(0, 0, 0, 0.4), 0 -2px 2px rgba(0, 0, 0, 0.4) !important;
+	background: -webkit-linear-gradient(#2c2d3c,#3b3d4f) !important;
+	border-top: 1px solid #2c2d3c !important;
+	border-bottom: 1px solid #2c2d3c !important;
+	border-color: #363749 !important;
+	box-shadow: inset 0 1px 0 #363749, 0 2px 2px rgba(0, 0, 0, 0.4), 0 -2px 2px rgba(0, 0, 0, 0.4) !important;
 }
 
 #-webkit-web-inspector .tabbed-pane-header-contents {
-	color: #bbb !important;
+	color: #a1a9da !important;
 }
 
 #-webkit-web-inspector .tabbed-pane:not(.help-window-main) .tabbed-pane-header-tab.selected,
@@ -1768,11 +1771,11 @@
 }
 
 #-webkit-web-inspector .split-view-vertical > .split-view-sidebar.split-view-contents-second:not(.maximized){
-	border-left: 2px solid #2b2b2b !important;
+	border-left: 2px solid #1c1d27 !important;
 }
 
 #-webkit-web-inspector .split-view-vertical > .split-view-sidebar.split-view-contents-first:not(.maximized){
-	border-right: 2px solid #2b2b2b !important;
+	border-right: 2px solid #1c1d27 !important;
 }
 
 #-webkit-web-inspector body.drawer-visible #drawer {
@@ -1886,9 +1889,9 @@
 #-webkit-web-inspector .pane-title-button.add,
 #-webkit-web-inspector .sidebar-pane-toolbar > .pane-title-button.refresh,
 #-webkit-web-inspector .pane-title-button.element-state {
-	/*background-image: none !important;*/
+	background-image: none !important;
 	-webkit-background-position: -24px 0 !important;
-	background-color: rgba(0,0,0,.8) !important;
+	background-color: #fff !important;
 	-webkit-mask-repeat: no-repeat !important;
 }
 
@@ -1901,9 +1904,9 @@
 }
 
 #-webkit-web-inspector .panel.elements .sidebar-pane-toolbar > select.select-settings {
-	/*background-image: none !important; */
+	background-image: none !important;
 	-webkit-background-position: -24px 0 !important;
-	background-color: rgba(0,0,0,.8) !important;
+	background-color: #fff !important;
 	-webkit-mask-repeat: no-repeat !important;
 	-webkit-mask-image: url(chrome-devtools://devtools/bundled/Images/paneSettingsButtons.png) !important;
 }
